# IoT_Edge_Gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pico_sdk_import.cmake
backend/: README.md  manage.py
backend/iot_api/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
backend/iot_api/migrations/: 0001_initial.py
backend/iot_api/templates/iot_api/: dashboard.html
backend/iot_project/: settings.py  urls.py  wsgi.py
firmware/: CMakeLists.txt
firmware/include/: config.h  ff.h  lwipopts.h  sd_card.h
firmware/src/: main.c
firmware/src/http/: http_client.c  http_client.h
firmware/src/modbus/: modbus_rtu.c  modbus_rtu.h
firmware/src/oled/: ssd1306.c  ssd1306.h
firmware/src/pwm_ctrl/: pwm_fan.c  pwm_fan.h
firmware/src/sdcard/: ff_stub.c  sdcard_logger.c  sdcard_logger.h
firmware/src/statemachine/: fsm_global.c  fsm_global.h
firmware/src/temperature/: temp_sensor.c  temp_sensor.h
firmware/src/wifi/: wifi_manager.c  wifi_manager.h
hardware/: BOM.csv
hardware/schematics/: CONNECTIONS.md
pico2w_slave/: main.py
